--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -32,3 +32,9 @@ jobs:
       -
         name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
+  run-playbooks:
+    runs-on: self-hosted
+    steps:
+    - uses: actions/checkout@v2
+    - name: Run Ansible Playbook
+      run: ansible-playbook UpgradeWorkload.yml
