--- a/UpgradeWorkload.yml
+++ b/UpgradeWorkload.yml
@@ -4,16 +4,15 @@
   vars:
     ansible_user: "root"
   tasks:
-  - name Choose the deployment
-    ansible.builtin.shell: |
+  - name: Choose the deployment
+    shell: |
       spawn rancher context switch
       expect "Select a Project:"
       send 3\n;
       exit 0
     args:
       executable: /usr/bin/expect
-    delegate_to: localhost
-  - name Update the deployment
-    ansible.builtin.shell:
+  - name: Update the deployment
+    shell:
       cmd: rancher kubectl image deployment/cicd cicd=kuzko/cicd:latest
       
