--- a/UpgradeWorkload.yml
+++ b/UpgradeWorkload.yml
@@ -4,6 +4,14 @@
   vars:
     ansible_user: "root"
   tasks:
+  - name: Login to Rancher
+    shell: |
+      spawn rancher login https://rh1 --token token-m8sc4:gk7l9l46pvlqfzhpvrjs7c57b57z79jdxbplvzjdzxrdd4txzdsb69 
+      expect "Do you want to continue connecting (yes/no)?"
+      send y\n;
+      exit 0
+    args:
+      executable: /usr/bin/expect
   - name: Choose the deployment
     shell: |
       spawn rancher context switch
@@ -14,5 +22,5 @@
       executable: /usr/bin/expect
   - name: Update the deployment
     shell:
-      cmd: rancher kubectl set image deployment/cicd cicd=kuzko/cicd:latest
+      cmd: rancher kubectl --namespace=default patch deployment cicd --type=strategic -p '{"spec":{"template":{"spec":{"containers":[{"name":"cicd","image": "kuzko/cicd:latest","env":[{"name":"FORCE_RESTART_AT","value":"$CI_PIPELINE_ID"}]}]}}}}'
       
