--- a/UpgradeWorkload.yml
+++ b/UpgradeWorkload.yml
@@ -22,4 +22,4 @@
       executable: /usr/bin/expect
   - name: Update the deployment
     script:
-      cmd: /usr/bin/update_cicd.sh
+      cmd: rancher kubectl --namespace=default patch deployment cicd -p "{\"spec\":{\"template\":{\"spec\":{\"containers\":[{\"name\":\"cicd\",\"image\":\"kuzko/cicd:latest\",\"env\":[{\"name\":\"FORCE_RESTART_AT\",\"value\":\"$CI_PIPELINE_ID\"}]}]}}}}"
